primero que nada "Feliz Navidad", segundo estoy trabajando en los cambios solicitados en la reunión, en estos momentos el commit incluye - Eliminación de opciones Aula virtual y configuraciones del navigation drawer alumno - El menú inferior ya tiene las 4 opciones (Home, aula virtual, calendario y notas) de manera fija y cada una funciona, borré 3 archivos de menú que habia creado para realizar el cambio según activity utilizada.
Quedo pendiente de como añadirle un color que resalte en que opción se encuentra y en el inicio aún no se me ocurre como cargar las 4 cosas solicitadas ( a no ser que se cree un tipo de cardview que funcione como un acceso directo) .

--- a/app/src/main/res/layout/aulavirtual_activity.xml
+++ b/app/src/main/res/layout/aulavirtual_activity.xml
@@ -27,6 +27,6 @@
         android:background="@color/oscuro"
         app:itemTextColor="@color/blanco"
         app:itemIconTint="@color/blanco"
-        app:menu="@menu/menu_aulavirtual"/>
+        app:menu="@menu/main_menu"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
