--- a/app/src/main/res/layout/calendario_activity.xml
+++ b/app/src/main/res/layout/calendario_activity.xml
@@ -20,5 +20,5 @@
         android:background="@color/oscuro"
         app:itemTextColor="@color/blanco"
         app:itemIconTint="@color/blanco"
-        app:menu="@menu/menu_calendario"/>
+        app:menu="@menu/main_menu"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
