--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_home"
+    android:title="Home"
+    android:icon="@drawable/ic_home_white"/>
     <item android:id="@+id/menu_calendario"
     android:title="Calendario"
     android:icon="@drawable/ic_calendario"/>
