--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,8 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/oscuro"
-        app:itemIconTint="@color/blanco"
-        app:itemTextColor="@color/blanco"
+        android:background="@android:color/black"
+        app:itemIconTint="@color/bottom_nav_color_fg"
+        app:itemTextColor="@color/bottom_nav_color_fg"
         app:menu="@menu/main_menu" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
