--- a/app/src/main/res/layout/sender_message.xml
+++ b/app/src/main/res/layout/sender_message.xml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
 
-
-    <TextView
-        android:id="@+id/tvSnUserName"
-        android:layout_width="304dp"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="-1dp"
-        android:layout_marginEnd="-1dp"
-        android:layout_toStartOf="@+id/imgSnProfilePic"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textAlignment="textEnd" />
+        android:layout_margin="5dp"
+        android:layout_weight="5"
+        android:background="@drawable/sender_globe"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvSnMessageContent"
-        android:layout_width="305dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvSnSince"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_toStartOf="@+id/imgSnProfilePic"
-        android:layout_weight="1"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/tvSnUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:textAlignment="textStart"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tvSnSince"
-        android:layout_width="148dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvSnUserName"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="1dp"
-        android:layout_toStartOf="@+id/imgSnProfilePic"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textSize="8sp" />
+        <TextView
+            android:id="@+id/tvSnMessageContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tvSnSince"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:textAlignment="textEnd"
+            android:textColor="#FFFFFF"
+            android:textSize="10sp" />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imgSnProfilePic"
-        android:layout_width="101dp"
-        android:layout_height="38dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-1dp"
-        android:layout_marginEnd="0dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_weight="1"
+        android:contentDescription="TODO"
         android:src="@drawable/ic_baseline_account_circle_24" />
 
-
-</RelativeLayout>
+</LinearLayout>
