--- a/app/src/main/res/layout/activity_grados_secciones.xml
+++ b/app/src/main/res/layout/activity_grados_secciones.xml
@@ -52,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:onClick="launchOrientadoresActivity"
         android:text="Orientadores"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
