Cambios realizados: - Implementación de cardview en pantalla principal de alumno - Creación de eventos onclick para cada card - Creación de activities donde debe redirigir cada card (Tareas pendientes, avisos) - Creación de recursos de color para el cardview del alumno
Problemas por corregir
- No se porque pero al parecer cuando invoco el onclick de los card pasa por el onclick del perfil, aparece un mensaje abajo que solo es para el de perfil
- La parte de menú del alumno sigue sin funcionarme, ya le revisé los ID a todos los controles y se los cambie para evitar choques pero sigue apareciendo el mismo error "Null point ..."

En proceso:
- Estoy viendo un video de youtube donde "explica" de que manera hacer los onclick en los fragments , voy a crear una copia del proyecto y voy a trastear en esa copia, estaré hasta las 12 por acá

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -37,7 +37,7 @@
                 android:layout_marginTop="32dp">
 
                 <TextView
-                    android:id="@+id/tv_fechamenu"
+                    android:id="@+id/tv_fechamenu_alumno"
                     android:layout_width="250dp"
                     android:layout_height="match_parent"
                     android:hint="@string/edtext_datein"
@@ -48,7 +48,7 @@
                     android:layout_height="match_parent"/>
 
                 <ImageButton
-                    android:id="@+id/btn_consultarmenu"
+                    android:id="@+id/btn_consultarmenu_alumno"
                     android:layout_width="55dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0"
@@ -62,7 +62,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/enviar_datos"
+                    android:id="@+id/btn_consultarcomida_alumno"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -79,7 +79,7 @@
             </LinearLayout>
 
             <ListView
-                android:id="@+id/ltv_comidadisponible"
+                android:id="@+id/ltv_comidadisponible_alumno"
                 android:layout_width="match_parent"
                 android:layout_height="433dp"
                 android:layout_marginTop="15dp" />
