--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,59 +7,146 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="86dp"
-        android:id="@+id/linearImagenPortada"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/descripcion"
-            android:src="@drawable/imagenhome" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linear_textos"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/linearImagenPortada"
-        android:layout_marginTop="32dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtBienvenido"
-            android:layout_width="wrap_content"
-            android:layout_height="21dp"
-            android:text="Bienvenido:"
-            android:textSize="18sp"
-            android:layout_marginLeft="15dp"/>
-
-        <TextView
-            android:id="@+id/txtNombreAcceso"
-            android:layout_width="252dp"
-            android:layout_height="32dp"
-            android:hint="Nombre del Alumno"
-            android:layout_marginLeft="15dp"/>
-    </LinearLayout>
-
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/linear_textos"
-        android:layout_marginTop="10dp">
-        <TextView
-            android:id="@+id/txtPalabrasBienvenida"
-            android:layout_width="363dp"
-            android:layout_height="198dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="232dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum euismod auctor sapien egestas consequat. Vestibulum eu mi vel massa posuere elementum nec a lacus"
-            android:textAlignment="gravity"
-            android:textSize="24sp" />
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="86dp"
+            android:id="@+id/linearImagenPortada"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/descripcion"
+                android:src="@drawable/imagenhome" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linear_textos"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/linearImagenPortada"
+            android:layout_marginTop="32dp"
+            android:orientation="horizontal"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:gravity="center_horizontal">
 
-    </ScrollView>
-</RelativeLayout>
+            <TextView
+                android:id="@+id/txtBienvenido"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:text="Bienvenido:"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txtNombreAcceso"
+                android:layout_width="0dp"
+                android:layout_height="32dp"
+                android:layout_weight="1"
+                android:hint="Nombre del Alumno"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/palabrasBienvenida"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linear_textos">
+
+            <TextView
+                android:id="@+id/txtPalabrasBienvenida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum euismod auctor sapien egestas consequat. Vestibulum eu mi vel massa posuere elementum nec a lacus"
+                android:textAlignment="gravity"
+                android:textSize="24sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/palabrasBienvenida"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="20dp">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_mistareas"
+                android:layout_width="160dp"
+                android:layout_height="190dp"
+                android:layout_margin="10dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:onClick="onClick">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:background="@drawable/cerclebackgroundmodalumno"
+                        android:padding="15dp"
+                        android:src="@drawable/tareaspendientes" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Tareas  Pendientes"
+                        android:textStyle="bold"
+                        android:textSize="17.5sp"/>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_avisossistema"
+                android:layout_width="160dp"
+                android:layout_height="190dp"
+                android:layout_margin="10dp"
+                android:clickable="true"
+                android:onClick="onClick"
+                android:foreground="?android:attr/selectableItemBackground">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:background="@drawable/cerclebackgroundmodalumno"
+                        android:padding="15dp"
+                        android:src="@drawable/ic_avisos"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:text="Avisos  del  Sistema"
+                        android:textStyle="bold"
+                        android:textSize="17.5sp"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+
+
+    </RelativeLayout>
+</LinearLayout>
