--- a/app/src/main/res/layout/activity_tareaspendientes_alumno.xml
+++ b/app/src/main/res/layout/activity_tareaspendientes_alumno.xml
@@ -10,9 +10,9 @@
         android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/tareaspendientes"
+            android:id="@+id/tv_tareaspendientes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/indicaciones_tareaspendientes"
@@ -27,7 +27,7 @@
             android:id="@+id/ltv_tareaspendientes"
             android:layout_width="wrap_content"
             android:layout_height="588dp"
-            android:layout_below="@id/tareaspendientes"
+            android:layout_below="@id/tv_tareaspendientes"
             android:layout_margin="15dp" />
     </RelativeLayout>
     </ScrollView>
