--- a/app/src/main/res/layout/calendario_activity.xml
+++ b/app/src/main/res/layout/calendario_activity.xml
@@ -11,19 +11,21 @@
         android:layout_marginTop="30dp"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/tv_indicaciones_calendario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="INDICACIONES"
+            android:text="@string/indicaciones_calendario"
             android:textAlignment="center"
             />
         <TextView
+            android:id="@+id/tv_explicacionCalendario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="@string/indicacionescalendario"
             />
         <CalendarView
-            android:id="@+id/calendar"
+            android:id="@+id/cal_alumno"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"/>
