--- a/app/src/main/res/layout/activity_aula_virtual.xml
+++ b/app/src/main/res/layout/activity_aula_virtual.xml
@@ -50,13 +50,13 @@
 
     <ListView
         android:id="@+id/lvSubjects"
-        android:layout_width="352dp"
-        android:layout_height="wrap_content"
+        android:layout_width="376dp"
+        android:layout_height="611dp"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:layout_constraintHorizontal_bias="0.10"
         app:layout_constraintVertical_bias="0.025" />
 </androidx.constraintlayout.widget.ConstraintLayout>
