--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:id="@+id/linearImagenPortada"
             android:orientation="horizontal">
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/imv_banner"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/descripcion"
@@ -35,7 +35,7 @@
             android:gravity="center_horizontal">
 
             <TextView
-                android:id="@+id/txtBienvenido"
+                android:id="@+id/tv_Bienvenido"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_weight="1"
@@ -43,7 +43,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/txtNombreAcceso"
+                android:id="@+id/tv_NombreAcceso"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_weight="1"
@@ -58,7 +58,7 @@
             android:layout_below="@id/linear_textos">
 
             <TextView
-                android:id="@+id/txtPalabrasBienvenida"
+                android:id="@+id/tv_PalabrasBienvenida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
