--- a/app/src/main/res/layout/activity_eliminarcontenido_maestro.xml
+++ b/app/src/main/res/layout/activity_eliminarcontenido_maestro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".layout.agregar_modif_contenido">
+    tools:context=".layout.eliminarcontenido_maestro">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,13 +25,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_crearcontenido"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_eliminarcontenido"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="SUBIR / MODIFICAR CONTENIDO"
+                    android:text="@string/eliminar_contenidomaestro"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -39,7 +39,7 @@
 
             <View
                 android:id="@+id/divider2"
-                android:layout_width="2in"
+                android:layout_width="300dp"
                 android:layout_height="1dp"
                 android:layout_gravity="center"
                 android:background="@color/atarraya" />
@@ -54,7 +54,7 @@
                     android:id="@+id/tv_indicacionesCont"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:text="@string/indicaciones_contenido"
                     android:textColor="@color/oscuro"
                     android:textSize="18sp" />
